[package]
name = "core-video"
description = "Bindings to CoreVideo framework"
homepage = "https://github.com/libark/core-video"
repository = "https://github.com/libark/core-video"
version = "0.1.4"
authors = ["Zhou Wei <zhouwei@ehom.net>"]
license = "MIT OR Apache-2.0"
categories = ["multimedia::video", "os::macos-apis"]
keywords = ["corevideo"]
edition = "2018"

[dependencies]
block = "0.1"
core-foundation = "0.9"
core-graphics = "0.23"
foreign-types = "0.5"
io-surface = "0.15"
libc = "0.2"

[dependencies.metal]
version = "0.27"
optional = true

[dependencies.objc]
version = "0.2"
optional = true

[features]
default = ["metal", "objc"]

[package.metadata.docs.rs]
no-default-features = true
default-target = "x86_64-apple-darwin"
targets = [
    "aarch64-apple-darwin",
    "aarch64-apple-ios",
    "x86_64-apple-darwin",
    "x86_64-apple-ios",
]
